# protobin

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
examples/: gen_complex_msg.rs  gen_test_msg.rs  print_wire_types.rs  print_zig_zag.rs
proptest-regressions/: lib.txt  protobuf_decoder.txt  var_int.txt  wire_decoder.txt  wire_i32.txt
src/: field_number.rs  field_value.rs  lib.rs  protobuf_decoder.rs  protobuf_encoder.rs  wire_i32.rs  wire_i64.rs  wire_len_ref.rs  wire_type.rs  wire_value_ref.rs  wire_var_int.rs
src/builders/: mod.rs  msg_builder.rs  msg_len_builder.rs  msg_len_packed_scribe.rs  msg_scribe.rs  msg_ser_builder.rs  msg_ser_packed_scribe.rs  packed_scribe.rs
src/decode/: decode_error.rs  mod.rs  msg_decoder.rs  msg_record_ref.rs
src/wire/: mod.rs  wire_decoder.rs  wire_encoder.rs  wire_i32.rs  wire_i64.rs  wire_len_calc.rs  wire_len_ref.rs  wire_value_ref.rs  wire_var_int.rs
